tools/sdk/src/main/java/xpu/sw/tools/sdk/asm/parser/AsmParser.java
// Generated from Asm.g4 by ANTLR 4.12.0

 	 package xpu.sw.tools.sdk.asm.parser;
 	 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AsmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, T__105=106, T__106=107, 
		T__107=108, T__108=109, T__109=110, T__110=111, T__111=112, T__112=113, 
		T__113=114, T__114=115, T__115=116, T__116=117, T__117=118, T__118=119, 
		T__119=120, T__120=121, T__121=122, T__122=123, T__123=124, T__124=125, 
		T__125=126, T__126=127, T__127=128, T__128=129, T__129=130, T__130=131, 
		T__131=132, T__132=133, T__133=134, T__134=135, T__135=136, T__136=137, 
		T__137=138, T__138=139, T__139=140, T__140=141, T__141=142, T__142=143, 
		T__143=144, T__144=145, T__145=146, T__146=147, T__147=148, T__148=149, 
		T__149=150, T__150=151, T__151=152, T__152=153, T__153=154, T__154=155, 
		T__155=156, T__156=157, T__157=158, T__158=159, T__159=160, T__160=161, 
		T__161=162, T__162=163, T__163=164, T__164=165, T__165=166, T__166=167, 
		T__167=168, T__168=169, T__169=170, T__170=171, T__171=172, T__172=173, 
		T__173=174, T__174=175, T__175=176, T__176=177, T__177=178, T__178=179, 
		T__179=180, T__180=181, T__181=182, T__182=183, T__183=184, T__184=185, 
		T__185=186, T__186=187, T__187=188, T__188=189, T__189=190, T__190=191, 
		T__191=192, T__192=193, T__193=194, T__194=195, T__195=196, T__196=197, 
		T__197=198, T__198=199, T__199=200, T__200=201, T__201=202, T__202=203, 
		T__203=204, T__204=205, T__205=206, T__206=207, T__207=208, T__208=209, 
		T__209=210, T__210=211, T__211=212, T__212=213, T__213=214, T__214=215, 
		T__215=216, T__216=217, T__217=218, T__218=219, T__219=220, T__220=221, 
		T__221=222, T__222=223, T__223=224, T__224=225, T__225=226, T__226=227, 
		T__227=228, T__228=229, T__229=230, T__230=231, T__231=232, T__232=233, 
		T__233=234, T__234=235, T__235=236, T__236=237, T__237=238, T__238=239, 
		T__239=240, T__240=241, T__241=242, T__242=243, T__243=244, T__244=245, 
		ARCHITECTUREID=246, DATA=247, FILEPATH=248, INCLUDE=249, FUNC=250, ENDFUNC=251, 
		DEFINE=252, SIGN=253, NAME=254, NUMBER=255, HEXADECIMAL1=256, HEXADECIMAL2=257, 
		STRING=258, TS=259, EOL=260, COMMA=261, COMMENT=262;
	public static final int
		RULE_parse = 0, RULE_line = 1, RULE_instruction = 2, RULE_controllerInstruction = 3, 
		RULE_controllerOpcode0 = 4, RULE_controllerOpcode1 = 5, RULE_controllerOpcode2 = 6, 
		RULE_controllerOpcode3 = 7, RULE_arrayInstruction = 8, RULE_arrayOpcode0 = 9, 
		RULE_arrayOpcode1 = 10, RULE_label = 11, RULE_directive = 12, RULE_assemblerdirective = 13, 
		RULE_architectureId = 14, RULE_data = 15, RULE_define = 16, RULE_expression = 17, 
		RULE_multiplyingExpression = 18, RULE_value = 19, RULE_include = 20, RULE_func = 21, 
		RULE_endfunc = 22, RULE_lb = 23, RULE_name = 24, RULE_number = 25, RULE_comment = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "line", "instruction", "controllerInstruction", "controllerOpcode0", 
			"controllerOpcode1", "controllerOpcode2", "controllerOpcode3", "arrayInstruction", 
			"arrayOpcode0", "arrayOpcode1", "label", "directive", "assemblerdirective", 
			"architectureId", "data", "define", "expression", "multiplyingExpression", 
			"value", "include", "func", "endfunc", "lb", "name", "number", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'cadd'", "'sadd'", "'cradd'", "'caddc'", "'saddc'", "'craddc'", 
			"'smult'", "'cmult'", "'crmult'", "'ssub'", "'csub'", "'crsub'", "'ssubc'", 
			"'csubc'", "'crsubc'", "'srvsub'", "'crvsub'", "'crrvsub'", "'srvsubc'", 
			"'crvsubc'", "'crrvsubc'", "'scompare'", "'ccompare'", "'crcompare'", 
			"'sand'", "'cand'", "'crand'", "'sor'", "'cor'", "'cror'", "'sxor'", 
			"'cxor'", "'crxor'", "'nop'", "'crstore'", "'cstack_store_pop'", "'crstack_store_pop'", 
			"'crswap_acc_mem'", "'sload'", "'cload'", "'cstack_push_load'", "'sstack_push_load'", 
			"'crstack_push_load'", "'shright'", "'shrightc'", "'sharight'", "'shright_fixed_amount'", 
			"'sharight_fixed_amount'", "'grshift_wob'", "'grshift_wbz'", "'grshift_wbh'", 
			"'crightins'", "'cleftins'", "'right_redins'", "'left_redins'", "'glshift_wob'", 
			"'glshift_wbz'", "'glshift_wbh'", "'rotate_right'", "'rotate_left'", 
			"'halt'", "'cc_start_w_halt'", "'cc_start_wo_halt'", "'cc_stop'", "'cc_reset'", 
			"'srstore'", "'addrstore'", "'setdec'", "'addrload'", "'stack_pop'", 
			"'stack_duplicate'", "'stack_over'", "'stack_swap'", "'stack_load_layer1'", 
			"'param'", "'setint'", "'resready'", "'vadd'", "'add'", "'radd'", "'riadd'", 
			"'vaddc'", "'addc'", "'raddc'", "'riaddc'", "'vmult'", "'mult'", "'rmult'", 
			"'rimult'", "'vsub'", "'sub'", "'rsub'", "'risub'", "'vsubc'", "'subc'", 
			"'rsubc'", "'risubc'", "'vrvsub'", "'rvsub'", "'rrvsub'", "'rirvsub'", 
			"'vrvsubc'", "'rvsubc'", "'rrvsubc'", "'rirvsubc'", "'vcompare'", "'compare'", 
			"'rcompare'", "'ricompare'", "'vand'", "'and'", "'rand'", "'riand'", 
			"'vor'", "'or'", "'ror'", "'rior'", "'vxor'", "'xor'", "'rxor'", "'rixor'", 
			"'fadd'", "'fradd'", "'fsub'", "'frsub'", "'fmult'", "'frmult'", "'frtmult'", 
			"'rfrtmult'", "'scdmult'", "'rscdmult'", "'fdiv'", "'frdiv'", "'addrinc'", 
			"'store'", "'rstore'", "'ristore'", "'sstore'", "'stack_store_pop'", 
			"'rstack_store_pop'", "'ristack_store_pop'", "'swap_acc_mem'", "'rswap_acc_mem'", 
			"'riswap_acc_mem'", "'vload'", "'load'", "'rload'", "'riload'", "'vstack_push_load'", 
			"'stack_push_load'", "'rstack_push_load'", "'ristack_push_load'", "'send'", 
			"'rsend'", "'risend'", "'csend'", "'ssend'", "'crsend'", "'insval'", 
			"'rotright_local'", "'rotleft_local'", "'shift_right'", "'shift_left'", 
			"'vleftins'", "'float'", "'sel_addrreg'", "'setval'", "'waitmatw'", "'jmp'", 
			"'brz'", "'brnz'", "'brsgn'", "'brnsgn'", "'brzdec'", "'brnzdec'", "'brbool'", 
			"'brnbool'", "'brcr'", "'brncr'", "'brcr_delayed'", "'brncr_delayed'", 
			"'brvalz'", "'brvalnz'", "'brvalsgn'", "'brvalnsgn'", "'brvalzdec'", 
			"'brvalnzdec'", "'brcmpval'", "'brcmpnval'", "'brcmpvaldec'", "'brcmpnvaldec'", 
			"'caddrinc'", "'cstore'", "'crload'", "'srcall'", "'search'", "'csearch'", 
			"'selshift'", "'delete'", "'wherezero'", "'wherepositive'", "'wherecarry'", 
			"'wherefirst'", "'wherenext'", "'whereprev'", "'wherenzero'", "'wherenegative'", 
			"'wherencarry'", "'wherenfirst'", "'wherennext'", "'wherenprev'", "'elsewhere'", 
			"'endwhere'", "'activate'", "'scannop'", "'scanadd'", "'scanmin'", "'scanmax'", 
			"'scanprefix_add'", "'scanprefix_bitwise_xor'", "'scansub'", "'scan_bitwise_or'", 
			"'scan_bitwise_xor'", "'scan_bitwise_and'", "'addrinc_acc'", "'addr_reg_stack_duplicate'", 
			"'addr_reg_stack_pop'", "'caddrstore'", "'insertio'", "'ixload'", "'srload'", 
			"'scanload'", "'loop1'", "'rloop1'", "'loop2'", "'rloop2'", "'vsrcall'", 
			"'vsearch'", "'vcsearch'", "'scansplit'", "'scanpermute'", "':'", "'*'", 
			"'/'", "'mod'", "'.architectureId'", "'.data'", null, "'include'", "'func'", 
			"'endfunc'", "'define'", null, null, null, null, null, null, null, null, 
			"','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "ARCHITECTUREID", "DATA", "FILEPATH", 
			"INCLUDE", "FUNC", "ENDFUNC", "DEFINE", "SIGN", "NAME", "NUMBER", "HEXADECIMAL1", 
			"HEXADECIMAL2", "STRING", "TS", "EOL", "COMMA", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Asm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AsmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AsmParser.EOF, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsmListener ) ((AsmListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsmListener ) ((AsmListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsmVisitor ) return ((AsmVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(54);
				line();
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & -2L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & -1L) != 0) || ((((_la - 128)) & ~0x3f) == 0 && ((1L << (_la - 128)) & -1L) != 0) || ((((_la - 246)) & ~0x3f) == 0 && ((1L << (_la - 246)) & 379L) != 0) );
			setState(59);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineContext extends ParserRuleContext {
		public DirectiveContext directive() {
			return getRuleContext(DirectiveContext.class,0);
		}
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsmListener ) ((AsmListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsmListener ) ((AsmListener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsmVisitor ) return ((AsmVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			setState(64);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				directive();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				label();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				instruction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionContext extends ParserRuleContext {
		public ControllerInstructionContext controllerInstruction() {
			return getRuleContext(ControllerInstructionContext.class,0);
		}
		public ArrayInstructionContext arrayInstruction() {
			return getRuleContext(ArrayInstructionContext.class,0);
		}
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsmListener ) ((AsmListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsmListener ) ((AsmListener)listener).exitInstruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsmVisitor ) return ((AsmVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAME) {
				{
				setState(66);
				label();
				}
			}

			setState(69);
			controllerInstruction();
			setState(70);
			arrayInstruction();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ControllerInstructionContext extends ParserRuleContext {
		public ControllerOpcode0Context controllerOpcode0() {
			return getRuleContext(ControllerOpcode0Context.class,0);
		}
		public ControllerOpcode1Context controllerOpcode1() {
			return getRuleContext(ControllerOpcode1Context.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ControllerOpcode2Context controllerOpcode2() {
			return getRuleContext(ControllerOpcode2Context.class,0);
		}
		public LbContext lb() {
			return getRuleContext(LbContext.class,0);
		}
		public ControllerOpcode3Context controllerOpcode3() {
			return getRuleContext(ControllerOpcode3Context.class,0);
		}
		public TerminalNode COMMA() { return getToken(AsmParser.COMMA, 0); }
		public ControllerInstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controllerInstruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsmListener ) ((AsmListener)listener).enterControllerInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsmListener ) ((AsmListener)listener).exitControllerInstruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsmVisitor ) return ((AsmVisitor<? extends T>)visitor).visitControllerInstruction(this);
			else return visitor.visitChildren(this);
		}
	}
